# carrot-sellers-cart

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  docker-start.sh  mkdocs.yml  persona-research-prompt-template.md  prd.txt  pyproject.toml  requirements.txt  run-local.sh  serve.py  start-dev-server.sh  start-server.sh  wrangler.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  new-person.md  quote-submission.md  score-review.md
docs/: about.md  data.md  index.md
docs/assets/: research-brief-template.md
docs/data/: carrot-sellers-data.csv  carrot-sellers-data.json  carrot-sellers-people.csv  carrot-sellers-quotes.csv  personalities-import-template.csv
docs/people/: TEMPLATE.md  danny-sheehan.md  david-grusch.md  george-knapp.md  index.md  jake-barber.md  jeremy-corbell.md  luis-elizondo.md  ross-coulthart.md
docs/stylesheets/: extra.css
scripts/: calculate_scores.py  export_data.py  macros.py
